camel-smpp: fixed deprecation warnings (#4133)