@@ -52,7 +52,7 @@ public class SmppConnectionFactoryTest {
     public void createConnectionWithProxyHost() throws IOException {
         SmppConfiguration configuration = new SmppConfiguration();
         configuration.setHttpProxyHost("localhost");
-        configuration.setHttpProxyPort(new Integer(3128));
+        configuration.setHttpProxyPort(Integer.valueOf(3128));
         SmppConnectionFactory factory = SmppConnectionFactory.getInstance(configuration);
         Connection connection = factory.createConnection("localhost", 2775);
 
@@ -71,7 +71,7 @@ public class SmppConnectionFactoryTest {
     public void createConnectionWithProxyUsername() throws IOException {
         SmppConfiguration configuration = new SmppConfiguration();
         configuration.setHttpProxyHost("localhost");
-        configuration.setHttpProxyPort(new Integer(3128));
+        configuration.setHttpProxyPort(Integer.valueOf(3128));
         configuration.setHttpProxyUsername("user");
         configuration.setHttpProxyPassword("secret");
         SmppConnectionFactory factory = SmppConnectionFactory.getInstance(configuration);
